# OpenCrab

./: .gitignore  Cargo.toml  README.md  brasileirao.html  config.example.toml  soul.md
.github/workflows/: ci.yml  release.yml
crates/channels/cli/: Cargo.toml
crates/channels/cli/src/: lib.rs
crates/channels/discord/: Cargo.toml
crates/channels/discord/src/: lib.rs
crates/channels/telegram/: Cargo.toml
crates/channels/telegram/src/: lib.rs
crates/channels/whatsapp/: Cargo.toml
crates/channels/whatsapp/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/plugin-wasm/: Cargo.toml
crates/plugin-wasm/src/: lib.rs
crates/providers/anthropic/: Cargo.toml
crates/providers/anthropic/src/: lib.rs
crates/providers/gemini/: Cargo.toml
crates/providers/gemini/src/: lib.rs
crates/providers/openai/: Cargo.toml
crates/providers/openai/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools-browser/: Cargo.toml
crates/tools-browser/src/: lib.rs
crates/tools/src/: code_runner.rs  filesystem.rs  http_request.rs  lib.rs  shell.rs  system_info.rs  url_reader.rs
plugins/: README.md
src/: main.rs
