[package]
name = "opencrab-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
opencrab-core.workspace = true
tokio = { workspace = true, features = ["process"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
