[package]
name = "opencrab-channel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
opencrab-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
