[package]
name = "opencrab-channel-discord"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
opencrab-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
serenity = { version = "0.12", features = ["client", "gateway", "model"] }
