[package]
name = "opencrab-provider-gemini"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
opencrab-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio-stream = "0.1"
futures-core = "0.3"
